Fix team members visibility

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2019,3 +2019,8 @@ a.overview__current-auction-error-link {
     -webkit-transform: translateY(0%);
   }
 }
+
+/* TODO: temp fix to make team members visibles in all pages */
+.team-grid-member {
+  opacity: 1 !important;
+}
